--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ body {
   color: #909090;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 ul,
 li {
   list-style: none;
@@ -26,7 +34,7 @@ h2,
 
 h2 {
   font-weight: 700;
-  color: white;
+  color: wheat;
 }
 
 .category {
