--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,27 @@
   max-width: 1144px;
 }
 
+header {
+  text-align: center;
+}
+
+header h1 {
+  margin: 1em 0;
+  color: wheat;
+}
+
 .nav {
-  padding: 0 1.5em;
+  margin-top: 1.5em;
+  padding: 0 2em;
+  min-width: 250px;
 }
 
 .nav-limit-item + .nav-limit-item {
   margin-left: 1em;
+}
+
+.nav-category-item {
+  margin: 0.5em 0;
 }
 
 .grid {
@@ -53,7 +68,7 @@
 .row {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .row-col {
@@ -81,4 +96,18 @@
 .gauge {
   height: 100%;
   background-color: #909090;
+}
+
+.pagination {
+  margin-top: 1em;
+  width: 20%;
+}
+
+.pagination-item {
+  border: 1px solid #909090;
+  padding: 0.4em 0.6em;
+}
+
+.pagination-item:hover {
+  cursor: pointer;
 }
