--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
 
 header {
   text-align: center;
+  padding: 1em 0;
 }
 
 header h1 {
-  margin: 1em 0;
+  margin-bottom: 0.3em;
   color: wheat;
 }
 
