--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,58 @@ header h1 {
   color: var(--clr-accent--200);
 }
 
+/* MODAL */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  width: 30%;
+}
+
+.close {
+  color: var(--crl-primary--200);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: var(--clr-accent--200);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-btn {
+  border: none;
+  background-color: var(--clr-accent--100);
+  color: white;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  padding: 0.5em 1em;
+}
+
+.modal-btn:hover {
+  cursor: pointer;
+}
+.modal-btn:active {
+  opacity: 0.7;
+}
+
 /* LEFT SIDE NAV  */
 
 .nav {
