--- a/src/App.css
+++ b/src/App.css
@@ -84,9 +84,14 @@ header h1 {
 }
 
 .nav-limit-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid;
   border-color: var(--crl-primary--100);
-  padding: 0.5em 0.7em;
+  /* padding: 0.5em 0.7em; */
+  width: 30px;
+  height: 30px;
 }
 
 .nav-limit-item--active {
@@ -186,9 +191,14 @@ header h1 {
 }
 
 .pagination-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
   border: 1px solid;
   border-color: var(--crl-primary--100);
-  padding: 0.4em 0.6em;
+  /* padding: 0.4em 0.6em; */
 }
 
 .pagination-item--active:first-child {
@@ -196,7 +206,11 @@ header h1 {
   border-color: var(--clr-accent--200);
   background-color: var(--clr-accent--200);
   color: white;
-  padding: 0.4em 0.6em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
   margin-right: 1em;
 }
 
@@ -205,7 +219,11 @@ header h1 {
   border-color: var(--clr-accent--200);
   background-color: var(--clr-accent--200);
   color: white;
-  padding: 0.4em 0.6em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
   margin: 0 1em;
 }
 
