--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ header h1 {
 .modal-btn {
   border: none;
   background-color: var(--clr-accent--100);
-  color: white;
+  color: var(--clr-neutral--100);
   text-transform: uppercase;
   font-size: 0.8rem;
   padding: 0.5em 1em;
@@ -97,7 +97,7 @@ header h1 {
 .nav-limit-item--active {
   border: 1px solid;
   border-color: var(--clr-accent--100);
-  color: white;
+  color: var(--clr-neutral--100);
   background-color: var(--clr-accent--100);
 }
 
@@ -205,7 +205,7 @@ header h1 {
   border: 1px solid;
   border-color: var(--clr-accent--200);
   background-color: var(--clr-accent--200);
-  color: white;
+  color: var(--clr-neutral--100);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -218,7 +218,7 @@ header h1 {
   border: 1px solid;
   border-color: var(--clr-accent--200);
   background-color: var(--clr-accent--200);
-  color: white;
+  color: var(--clr-neutral--100);
   display: flex;
   align-items: center;
   justify-content: center;
